--- a/spotlight/MainWindow.xaml
+++ b/spotlight/MainWindow.xaml
@@ -1,24 +1,52 @@
-﻿<Window x:Class="spotlight.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:spotlight"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="303" Width="483">
-    <Grid>
-        <TextBox x:Name="mainInputBox" Height="23" Margin="10,0" TextWrapping="Wrap" TextChanged="OnSearchInput"
-                 Text="" VerticalAlignment="Top" />
-        <ListBox x:Name="listBox" Margin="10,28,10,10">
+﻿<Controls:MetroWindow x:Class="spotlight.MainWindow"
+                      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                      xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                      xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                      xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                      xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:local="clr-namespace:spotlight"
+                      mc:Ignorable="d"
+                      BorderBrush="{DynamicResource AccentColorBrush}"
+                      BorderThickness="1"
+                      Title="MainWindow" Height="321.5" Width="483">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resources/Icons.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
 
+    <Window.Background>
+        <SolidColorBrush Opacity="0.75" Color="{x:Static SystemParameters.WindowGlassColor}"/>
+    </Window.Background>
+
+    <Grid>
+        <Rectangle Height="20" Width="20" Margin="10,21,0,0" HorizontalAlignment="Left" VerticalAlignment="Top">
+            <Rectangle.Fill>
+                <VisualBrush Visual="{StaticResource appbar_magnify}"/>
+            </Rectangle.Fill>
+        </Rectangle>
+        <TextBox x:Name="mainInputBox"
+                 Controls:TextBoxHelper.Watermark="Search"
+                 Controls:TextBoxHelper.ClearTextButton="True" 
+                 
+                 Foreground="Azure" Background="Transparent" BorderThickness="0"
+                 
+                 FontSize="22" Margin="39,0,41,243" TextWrapping="Wrap"
+                 TextChanged="OnSearchInput"
+                 KeyUp="MainInputBox_OnKeyUp"
+                 Text="" Height="36" VerticalAlignment="Bottom" 
+        />
+        <ListBox x:Name="listBox" Margin="10,56,10,10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid Margin="2" MouseUp="UIElement_OnMouseUp">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition/>
+                            <ColumnDefinition Width="Auto" />
+                            <ColumnDefinition />
                         </Grid.ColumnDefinitions>
-                        <Image Grid.Column="0" Grid.RowSpan="2" Source="{Binding Icon}" Margin="0,0,10,0"/>
+                        <Image Grid.Column="0" Grid.RowSpan="2" Source="{Binding Icon}" Margin="0,0,10,0" />
                         <StackPanel Grid.Column="1">
                             <TextBlock Text="{Binding DisplayName}" />
                             <TextBlock Text="{Binding FileLocation}" />
@@ -28,4 +56,5 @@
             </ListBox.ItemTemplate>
         </ListBox>
     </Grid>
-</Window>
+
+</Controls:MetroWindow>
