SearchEng optimize FilterData, add search only one type

--- a/spotlight/MainWindow.xaml
+++ b/spotlight/MainWindow.xaml
@@ -103,8 +103,9 @@
                     </Grid>
                 </DataTemplate>
 
-                <DataTemplate DataType="{x:Type listItem:Groups}">
-                    <TextBlock Text="{Binding Name}" FontSize="13" FontWeight="Bold" Margin="0,-5,0,-5" />
+                <DataTemplate DataType="{x:Type listItem:Group}">
+                    <TextBlock Text="{Binding Name}" FontSize="13" FontWeight="Bold" Margin="0,-5,0,-5"
+                               MouseUp="OnGroupClick" />
                 </DataTemplate>
             </ListBox.Resources>
         </ListBox>
