--- a/spotlight/MainWindow.xaml
+++ b/spotlight/MainWindow.xaml
@@ -98,7 +98,8 @@
                             <ColumnDefinition />
                         </Grid.ColumnDefinitions>
                         <Image Grid.Column="0" Height="15" Width="15" Source="{Binding file.Icon}" Margin="0,-2,12,0" />
-                        <TextBlock Grid.Column="1" Text="{Binding file.DisplayName}" FontSize="15" Margin="0,-5,0,-5"
+                        <!-- см  <Setter Property="Padding" Value="12" /> -->
+                        <local:HighlightTextBlock Grid.Column="1" Text="{Binding file.DisplayName}" HighlightText="{Binding file.SelectedName}" FontSize="15" Margin="0,-5,0,-5"
                                    TextWrapping="Wrap" />
                     </Grid>
                 </DataTemplate>
